<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/headerCl"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:background="@drawable/gray_bg"
        android:scaleType="centerCrop" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_back" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bookmarkIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_bookmark_outline" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="200dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:maxLines="1"
        android:text="@string/sdate"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/newHeadlineTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateTv"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-medium"
        android:maxLines="2"
        android:text="Lorem ipsum dolor sit amet, consectetur adip"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/newHeadlineTv"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_news_desc">

        <androidx.cardview.widget.CardView
            android:id="@+id/reporterCv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/repoter_img" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/reporterTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_toStartOf="@id/saveBtn"
            android:layout_toEndOf="@id/reporterCv"
            android:text="@string/reporter_name"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/infoTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reporterTv"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toStartOf="@id/saveBtn"
            android:layout_toEndOf="@id/reporterCv"
            android:text="@string/lorem_consequatur"
            android:textColor="@color/gray"
            android:textSize="14sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveBtn"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_bookmark"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/descriptionTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/reporterCv"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:lineHeight="25dp"
            android:scrollbars="vertical"
            android:textColor="@color/des"
            android:textSize="16sp" />

    </RelativeLayout>


</RelativeLayout>