<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backIv"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saved"
        android:textColor="@color/bookmark_bg"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/backIv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/backIv" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/searchEt"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="20dp"
        android:background="@drawable/bg_bookmark"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_search"
        android:drawableEnd="@drawable/ic_setting"
        android:drawablePadding="5dp"
        android:hint="Search"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backIv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/todayTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-medium"
        android:maxLines="1"
        android:text="@string/today"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/searchEt"
        app:layout_constraintTop_toBottomOf="@id/searchEt" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/seeAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_all"
        android:textColor="@color/bookmark_bg"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/todayTv"
        app:layout_constraintEnd_toEndOf="@id/searchEt"
        app:layout_constraintTop_toTopOf="@id/todayTv" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/savedNewsRv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_news_desc"
        android:paddingBottom="5dp"
        android:layout_marginBottom="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/searchEt"
        app:layout_constraintStart_toStartOf="@id/searchEt"
        app:layout_constraintTop_toBottomOf="@id/todayTv"
        tools:listitem="@layout/saved_news_item" />

</androidx.constraintlayout.widget.ConstraintLayout>